--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
   <!-- <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8pf6ZdFQj5qw7rc_HSGrhUwQKfIe9ICw"></script> -->
 
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="https://thepaybox.github.io/runtime.js"></script><script type="text/javascript" src="https://thepaybox.github.io/polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="https://thepaybox.github.io/runtime.js"></script>
+  <script type="text/javascript" src="https://thepaybox.github.io/polyfills.js"></script>
+  <script type="text/javascript" src="https://thepaybox.github.io/styles.js"></script><script type="text/javascript" src="https://thepaybox.github.io/vendor.js"></script>
+  <script type="text/javascript" src="https://thepaybox.github.io/main.js"></script></body>
 
 </html>
